Fixed page jumping to selector.component on page load

--- a/public/css/components/_more-features.scss
+++ b/public/css/components/_more-features.scss
@@ -49,7 +49,6 @@ more-features-feature {
 	}
 
 	.text-container {
-	pointer-events: none;
 	  display: flex;
 	  display: -webkit-flex;
 	  align-items: center;
@@ -62,6 +61,10 @@ more-features-feature {
 	  opacity: 0;
 	  @include transition(0.2s);
 	  background-color: $moreFeaturesBackgroundColor;
+	}
+
+	.text-container * {
+		pointer-events: none;
 	}
 
 	.text-container-cell {
